kubernetes/apps/base/freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: freshrss
  name: freshrss
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
        - name: freshrss
          image: freshrss/freshrss
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 4000m
              memory: 2Gi
            limits:
              cpu: "10"
              memory: 8Gi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /freshrss
              name: freshrss-freshrss
      restartPolicy: Always
      volumes:
        - name: freshrss-freshrss
          persistentVolumeClaim:
            claimName: freshrss
