kubernetes/apps/base/freshrss/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: freshrss
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`freshrss.${cluster_domain}`)
      kind: Rule
      services:
        - name: freshrss
          port: 19200
